[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/Actors/Areas/MapTeleporter.gd" type="Script" id=1]
[ext_resource path="res://Src/Components/MapLoader.gd" type="Script" id=2]

[node name="MapTeleporter" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="MapLoader" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_MapTeleporter_body_entered"]
